# DotR

./: .bumpversion.toml  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  cliff.toml  codecov.yml  config.toml
.github/workflows/: pr-check.yml  release.yml  rust.yml
src/: action_var_marker.txt  lib.rs  main.rs  order_log.txt  pre_action3.txt  utils.rs
src/cli/: copydots.rs  importdots.rs  initconfig.rs  mod.rs
src/config/: mod.rs
src/context/: mod.rs
src/package/: mod.rs
src/profile/: mod.rs
tests/: actions_tests.rs  cli_tests.rs  compile_string_tests.rs  diff_tests.rs  ignore_tests.rs  integration_test.rs  package_variables_tests.rs  prompt_tests.rs  templating_tests.rs  uservariables_tests.rs
tests/common/: mod.rs
tests/playground/src/: .advanced  .bashrc  .bashrc.template  .bashrc_output  .env  .gitconfig  .myconfig  .nested_test  .override_test  .pkg1  .pkg2  .pkg_var_test  .priority_test  .template_test  .templated  .vimrc  .zshrc  pre_action2.txt
tests/playground/src/.config_output/nested/: settings.conf
tests/playground/src/config/alacritty/: alacritty.yml
tests/playground/src/nvim/: init.lua
tests/playground/src/tmux/: theme.conf  tmux.conf
tests/playground/tests/playground/src/: .advanced  .bashrc_output  .myconfig
tests/playground/tests/playground/src/.config_output/: app.conf
