[package]
name = "dotr"
description = "A dotfile manager written in Rust."
authors = ["Utsob Roy <connect@utsob.me>"]
license = "MIT"
version = "0.5.10"
edition = "2024"
repository = "https://github.com/uroybd/dotr"

[dependencies]
toml = "0.9.8"
walkdir = "2.5.0"

[dependencies.clap]
version = "4.5.51"
features = ["derive"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]
