[package]
name = "dotr"
description = "A dotfile manager written in Rust."
authors = ["Utsob Roy <connect@utsob.me>"]
license = "MIT"
version = "0.8.0"
edition = "2024"
repository = "https://github.com/uroybd/dotr"

[dependencies]
anyhow = "1.0.100"
fs_extra = "1.3.0"
tera = "1.20.1"
toml = "0.9.8"
walkdir = "2.5.0"

[dependencies.clap]
version = "4.5.51"
features = ["derive"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]
