[package]
name = "dotr"
description = "A dotfile manager written in Rust."
authors = ["Utsob Roy <connect@utsob.me>"]
license = "MIT"
version = "0.16.1"
edition = "2024"
repository = "https://github.com/uroybd/dotr"

[dependencies]
anyhow = "1.0.100"
diff = "0.1.13"
glob-match = "0.2.1"
regex = "1.12.2"
tera = "1.20.1"
toml = "0.9.8"
uuid = { version = "1.18.1", features = ["v4"] }
walkdir = "2.5.0"

[dependencies.clap]
version = "4.5.51"
features = ["derive"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[profile.release]
lto = true    # Link Time Optimization - improves speed and size
strip = true  # Strip symbols - reduces size without performance impact
